argocd/clusters/wheatley/live/sabnzbd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "sabnzbd"
    openshift.io/display-name: "sabnzbd"
  name: sabnzbd
