argocd/clusters/wheatley/live/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: sabnzbd
  sessionAffinity: None
  type: ClusterIP
