argocd/clusters/wheatley/live/sabnzbd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    signal9-internal: ""
  name: sabnzbd
  namespace: sabnzbd
spec:
  host: sabnzbd.int-apps.wheatley.lab.signal9.gg
  port:
    targetPort: 9080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sabnzbd
    weight: 100
  wildcardPolicy: None
